--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -21,7 +21,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"D:/Y3S3/Test_Build01;D:/Y3S3/MyGame/githubLocal/my_intern_game/WebGL Builds;;;;;;;;\"}"
+                "value": "{\"m_Value\":\"D:/Y3S3/Test_Build_WebGL_02;D:/Y3S3/Test_Build_WebGL;D:/Y3S3/Test_Build01;D:/Y3S3/MyGame/githubLocal/my_intern_game/WebGL Builds;;;;;;\"}"
             }
         ]
     }
